--- a/src/Uno/Prism.Uno/Prism.Uno.csproj
+++ b/src/Uno/Prism.Uno/Prism.Uno.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="MSBuild.Sdk.Extras/2.0.54">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;xamarinios10;monoandroid90;uap10.0.16299</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;uap10.0.17763</TargetFrameworks>
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
     <RootNamespace>Prism</RootNamespace>
@@ -18,7 +18,7 @@
     <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed" Version="2.0.1-uno.28" />
     <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Interactivity" Version="2.0.1-uno.28" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='uap10.0.16299'">
+  <ItemGroup Condition="'$(TargetFramework)'=='uap10.0.17763'">
     <PackageReference Include="Microsoft.Xaml.Behaviors.Uwp.Managed" Version="2.0.1" />
     <PackageReference Include="CommonServiceLocator" Version="2.0.5" />
   </ItemGroup>
